Altered design and added Chart of accounts