@@ -8,8 +8,12 @@ import com.vaadin.flow.component.button.ButtonVariant;
 import com.vaadin.flow.component.dependency.JsModule;
 import com.vaadin.flow.component.formlayout.FormLayout;
 import com.vaadin.flow.component.html.Div;
+import com.vaadin.flow.component.html.H3;
+import com.vaadin.flow.component.html.Paragraph;
+import com.vaadin.flow.component.html.Span;
 import com.vaadin.flow.component.littemplate.LitTemplate;
 import com.vaadin.flow.component.template.Id;
+import com.vaadin.flow.dom.ThemeList;
 import com.vaadin.flow.router.QueryParameters;
 import com.vaadin.flow.router.RouteParam;
 import com.vaadin.flow.router.RouteParameters;
@@ -18,7 +22,7 @@ import sr.we.data.controller.LoanRequestService;
 import sr.we.security.AuthenticatedUser;
 import sr.we.shekelflowcore.entity.LoanRequest;
 import sr.we.shekelflowcore.entity.LoanRequestPlan;
-import sr.we.shekelflowcore.entity.helper.Build;
+import sr.we.shekelflowcore.entity.helper.Executable;
 import sr.we.shekelflowcore.entity.helper.adapter.LoanRequestBody;
 import sr.we.shekelflowcore.entity.helper.vo.LoanRequestAssetsVO;
 import sr.we.shekelflowcore.entity.helper.vo.LoanRequestVO;
@@ -26,7 +30,10 @@ import sr.we.shekelflowcore.settings.util.Constants;
 import sr.we.ui.components.Highlight;
 import sr.we.ui.views.LineAwesomeIcon;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 /**
  * A Designer generated component for the add-requests template.
@@ -38,7 +45,7 @@ import java.util.*;
 @JsModule("./src/views/finance/loanrequests/add-requests.ts")
 public class AddRequests extends LitTemplate {
 
-    private final Build refresh;
+    private final Executable<?> refresh;
     @Id("form-layout")
     protected FormLayout formLayout;
     @Id("assets-form")
@@ -52,24 +59,38 @@ public class AddRequests extends LitTemplate {
     @Id("board-layout")
     protected Div boardLayout;
     @Id("back-button")
-    private Button backButton;
+    protected Button backButton;
     @Id("save-btn")
-    private Button saveBtn;
-    private String business;
+    protected Button saveBtn;
     @Id("contract-layout")
-    private Div contractLayout;
+    protected Div contractLayout;
     @Id("generate-contract-btn")
-    private Button generateContractBtn;
+    protected Button generateContractBtn;
+    @Id("new-request-lbl")
+    protected H3 newRequestLbl;
+    @Id("new-request-paragraph")
+    protected Paragraph newRequestParagraph;
+    @Id("loan-request-cancel-btn")
+    protected Button loanRequestCancelBtn;
+    @Id("loan-request-archive-btn")
+    protected Button loanRequestArchiveBtn;
+    private String business;
     private LoanRequest loanRequest;
+    @Id("loan-request-status-span")
+    private Span loanRequestStatusSpan;
+    @Id("loan-request-approve-btn")
+    private Button loanRequestApproveBtn;
+    @Id("loan-request-done-btn")
+    private Button loanRequestDoneBtn;
 
     /**
      * Creates a new AddRequests.
      */
     public AddRequests() {
         // You can initialise any data required for the connected UI components here.
-        backButton.addClickListener(f -> {
-            UI.getCurrent().navigate(RequestsView.class, new RouteParameters(new RouteParam("business", business)));
-        });
+
+
+        backButton.addClickListener(f -> UI.getCurrent().navigate(RequestsView.class, new RouteParameters(new RouteParam("business", business))));
         backButton.setIcon(new LineAwesomeIcon("la la-arrow-left"));
         backButton.addThemeVariants(ButtonVariant.LUMO_CONTRAST, ButtonVariant.LUMO_ICON);
 
@@ -79,15 +100,39 @@ public class AddRequests extends LitTemplate {
         saveBtn.addClickListener(f -> onSave());
 
 
-        refresh = new Build<>() {
-
-            @Override
-            public Object build() {
-                board();
-                return null;
-            }
+        refresh = (Executable<Object>) () -> {
+            board();
+            return null;
         };
+        loanRequestApproveBtn.setVisible(false);
+        loanRequestCancelBtn.setVisible(false);
+        loanRequestArchiveBtn.setVisible(false);
+        loanRequestStatusSpan.setVisible(false);
+        loanRequestDoneBtn.setVisible(false);
+        loanRequestDoneBtn.addClickListener(f -> {
+            LoanRequestService loanRequestService = ContextProvider.getBean(LoanRequestService.class);
+            loanRequest = loanRequestService.procesNextStep(AuthenticatedUser.token(), loanRequest.getId(), LoanRequest.Status.DONE);
+            setLoanRequest(loanRequest);
+        });
+        loanRequestApproveBtn.addClickListener(f -> {
+            LoanRequestService loanRequestService = ContextProvider.getBean(LoanRequestService.class);
+            loanRequest = loanRequestService.procesNextStep(AuthenticatedUser.token(), loanRequest.getId(), LoanRequest.Status.APPROVED);
+            setLoanRequest(loanRequest);
+        });
+
+        loanRequestCancelBtn.addClickListener(f -> {
+            LoanRequestService loanRequestService = ContextProvider.getBean(LoanRequestService.class);
+            loanRequest = loanRequestService.procesNextStep(AuthenticatedUser.token(), loanRequest.getId(), LoanRequest.Status.CANCEL);
+            setLoanRequest(loanRequest);
+        });
+
+        loanRequestArchiveBtn.addClickListener(f -> {
+            LoanRequestService loanRequestService = ContextProvider.getBean(LoanRequestService.class);
+            loanRequest = loanRequestService.procesNextStep(AuthenticatedUser.token(), loanRequest.getId(), LoanRequest.Status.ARCHIVE);
+            setLoanRequest(loanRequest);
+        });
         contractLayout.setVisible(false);
+        generateContractBtn.setVisible(false);
         generateContractBtn.addClickListener(f -> {
             /*try {
                 createNewContent();
@@ -96,6 +141,7 @@ public class AddRequests extends LitTemplate {
                 throw new RuntimeException(e);
             }*/
         });
+        loanRequestStatusSpan.setWidth("85px");
     }
 
     /*public void createNewContent() throws IOException, FrameworkException, Docx4JException, JAXBException, ParserConfigurationException, TransformerException {
@@ -140,36 +186,86 @@ public class AddRequests extends LitTemplate {
         repaymentForm.setLoanRequest(loanRequest, refresh);
         refresh.build();
         contractLayout.setVisible(true);
+        newRequestLbl.setVisible(false);
+        newRequestParagraph.setVisible(false);
+        loanRequestApproveBtn.setVisible(false);
+        loanRequestCancelBtn.setVisible(false);
+        loanRequestArchiveBtn.setVisible(false);
+        loanRequestDoneBtn.setVisible(false);
+        if (loanRequest.getStatus().compareTo(LoanRequest.Status.REQUESTED) == 0) {
+            loanRequestApproveBtn.setVisible(true);
+            loanRequestArchiveBtn.setVisible(true);
+        }
+        if (loanRequest.getStatus().compareTo(LoanRequest.Status.APPROVED) == 0 || loanRequest.getStatus().compareTo(LoanRequest.Status.CANCEL) == 0) {
+            loanRequestArchiveBtn.setVisible(true);
+        }
+        if (loanRequest.getStatus().compareTo(LoanRequest.Status.REQUESTED) == 0 || loanRequest.getStatus().compareTo(LoanRequest.Status.APPROVED) == 0) {
+            boolean b = loanRequest.getPaymentTransactions() != null && !loanRequest.getPaymentTransactions().isEmpty();
+            boolean present = loanRequest.getLoanRequestPlans().stream().map(f -> f.getLoanRequestPlanDetails().stream().anyMatch(g -> f.getLoanRequestPlanDetails().stream().anyMatch(l -> l.getPaymentTransactions() != null && !l.getPaymentTransactions().isEmpty()))).findAny().isPresent();
+            if (b || present) {
+                loanRequestCancelBtn.setVisible(true);
+            }
+
+
+        }
+        if (loanRequest.getStatus().compareTo(LoanRequest.Status.APPROVED) == 0) {
+            boolean allDone = loanRequest.getNextPaymentReferenceId() == null;
+            if (allDone) {
+                loanRequestDoneBtn.setVisible(true);
+            }
+        }
+        if (loanRequest.getStatus().compareTo(LoanRequest.Status.DONE) == 0) {
+            loanRequestApproveBtn.setVisible(false);
+            loanRequestCancelBtn.setVisible(false);
+            loanRequestArchiveBtn.setVisible(false);
+            loanRequestDoneBtn.setVisible(false);
+        }
+        loanRequestStatusSpan.setVisible(true);
+        loanRequestStatusSpan.setText(loanRequest.getStatus().name());
+        ThemeList themeList = loanRequestStatusSpan.getElement().getThemeList();
+        themeList.add("badge");
+        if (loanRequest.getStatus().compareTo(LoanRequest.Status.REQUESTED) == 0) {
+            themeList.add("primary");
+        } else if (loanRequest.getStatus().compareTo(LoanRequest.Status.APPROVED) == 0) {
+            themeList.add("success");
+        }
+        if (loanRequest.getStatus().compareTo(LoanRequest.Status.CANCEL) == 0) {
+            themeList.add("error");
+        }
+        if (loanRequest.getStatus().compareTo(LoanRequest.Status.ARCHIVE) == 0) {
+            themeList.add("tertiary");
+        }
+        if (loanRequest.getStatus().compareTo(LoanRequest.Status.DONE) == 0) {
+            themeList.add("primary success");
+        }
+        saveBtn.setVisible(false);
     }
 
     private void board() {
         UI current = UI.getCurrent();
         String token = AuthenticatedUser.token();
-        new Thread(new Runnable() {
-            @Override
-            public void run() {
+        new Thread(() -> {
 
-                LoanRequestService loanRequestService = ContextProvider.getBean(LoanRequestService.class);
-                loanRequest = loanRequestService.get(loanRequest.getId(), token);
-                current.access(() -> {
-                    boardLayout.removeAll();
-                    Board board = new Board();
-                    boardLayout.add(board);
+            LoanRequestService loanRequestService = ContextProvider.getBean(LoanRequestService.class);
+            loanRequest = loanRequestService.get(loanRequest.getId(), token);
+            current.access(() -> {
+                boardLayout.removeAll();
+                Board board = new Board();
+                boardLayout.add(board);
 
-                    Long reduce = 0l;
-                    List<LoanRequestPlan> loanRequestPlans = new ArrayList<>(AddRequests.this.loanRequest.getLoanRequestPlans());
-                    if (loanRequestPlans != null && !loanRequestPlans.isEmpty()) {
-                        reduce = loanRequestPlans.stream().map(f -> f.getFreqAmount()).reduce(0l, (subtotal, element) -> subtotal + element);
-                    }
+                long reduce = 0L;
+                List<LoanRequestPlan> loanRequestPlans = new ArrayList<>(AddRequests.this.loanRequest.getLoanRequestPlans());
+                if (!loanRequestPlans.isEmpty()) {
+                    reduce = loanRequestPlans.stream().map(LoanRequestPlan::getFreqAmount).reduce(0L, Long::sum);
+                }
 
-                    Highlight principal = new Highlight("Principal", () -> Constants.CURRENCY_FORMAT.format(loanRequest.getAmount()), () -> null);
-                    Long finalReduce = reduce;
-                    Highlight initial_frequency = new Highlight("Initial Frequency", () -> loanRequest.getFreq().getCaption() + " " + loanRequest.getFreqVal().doubleValue(), () -> finalReduce.doubleValue());
-                    Highlight intrest = new Highlight("Intrest", () -> loanRequest.getIntrest() == null ? Constants.CURRENCY_FORMAT.format(0) : Constants.CURRENCY_FORMAT.format(loanRequest.getIntrest()), () -> null);
-                    Highlight balance = new Highlight("Balance", () -> loanRequest.getBalance() == null ? Constants.CURRENCY_FORMAT.format(0) : Constants.CURRENCY_FORMAT.format(loanRequest.getBalance()), () -> loanRequest.getTransactionBalance() == null ? null : loanRequest.getTransactionBalance().doubleValue());
-                    board.addRow(principal, initial_frequency, intrest, balance);
-                });
-            }
+                Highlight principal = new Highlight("Principal", () -> Constants.CURRENCY_FORMAT.format(loanRequest.getAmount()), () -> null);
+                long finalReduce = reduce;
+                Highlight initial_frequency = new Highlight("Initial Frequency", () -> loanRequest.getFreq().getCaption() + " " + loanRequest.getFreqVal().doubleValue(), () -> (double) finalReduce);
+                Highlight intrest = new Highlight("Intrest", () -> loanRequest.getIntrest() == null ? Constants.CURRENCY_FORMAT.format(0) : Constants.CURRENCY_FORMAT.format(loanRequest.getIntrest()), () -> null);
+                Highlight balance = new Highlight("Balance", () -> loanRequest.getBalance() == null ? Constants.CURRENCY_FORMAT.format(0) : Constants.CURRENCY_FORMAT.format(loanRequest.getBalance()), () -> loanRequest.getTransactionBalance() == null ? null : loanRequest.getTransactionBalance().doubleValue());
+                board.addRow(principal, initial_frequency, intrest, balance);
+            });
         }).start();
 
     }
@@ -179,7 +275,7 @@ public class AddRequests extends LitTemplate {
         LoanRequestBody loanRequestBody = requestorForm.getLoanRequestBody();
 
         LoanRequestService bean = ContextProvider.getBean(LoanRequestService.class);
-        LoanRequest loanRequest = null;
+        LoanRequest loanRequest;
         if (this.loanRequest == null) {
             loanRequest = bean.create(AuthenticatedUser.token(), loanRequestBody);
         } else {
@@ -201,7 +297,7 @@ public class AddRequests extends LitTemplate {
             vo.setNew(false);
             loanRequest = bean.edit(AuthenticatedUser.token(), vo);
         }
-        List<String> strings = Arrays.asList(loanRequest.getId().toString());
+        List<String> strings = List.of(loanRequest.getId().toString());
         Map<String, List<String>> map = new HashMap<>();
         map.put("id", strings);
         QueryParameters queryParameters = new QueryParameters(map);
